@@ -4,6 +4,9 @@
 
 # Changelog:
 #
+# Updated: 16 JAN 2025
+# - Add MAXRATES detection to control extra testing
+#
 # Updated: 09 JAN 2025
 # - Updated the README
 #
